# rust-recorder

./: Cargo.toml  config.json
src/: _scap.rs  main.rs
src/api/: errors.rs  mod.rs
src/audio/: mod.rs
src/capture/: mod.rs
src/config/: mod.rs
src/ffmpeg/: capture.rs  mod.rs
src/keep_alive/: mod.rs
src/logger/: mod.rs
src/native_capture/: mod.rs
src/uploader/: mod.rs
