[package]
name = "rust-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-capture = "1.4.4"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.219", features = ["derive"]}
axum = "0.8.4"
serde_json = "1.0.140"
chrono = "0.4.41"
reqwest = {version="0.12.20", features = ["multipart", "stream"] }
tokio-util = {version="0.7.15", features=["codec"]}
config-file = { version = "0.2.3", features = ["json"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
